# algorithm-study

./: .gitignore  CMakeLists.txt  main.cpp
Basics_CPP/: nk_2.cpp
Code/Array/: code_1_search.cpp  code_2_removeElement.cpp  code_3_sortedSquares.cpp  code_4_minSubArrayLen.cpp  code_5_generateMatrix.cpp  code_6_subSum.cpp  code_7_land.cpp
Code/Backtrack/: code_0_header.h  code_10_findSubsequences.cpp  code_11_permute.cpp  code_12_permuteUnique.cpp  code_13_findItinerary.cpp  code_14_solveNQueens.cpp  code_15_solveSudoku.cpp  code_1_combine.cpp  code_2_combinationSum3.cpp  code_3_letterCombinations.cpp  code_4_combinationSum.cpp  code_5_combinationSum2.cpp  code_6_partition.cpp  code_7_restoreIpAddresses.cpp  code_8_subsets.cpp  code_9_subsetsWithDup.cpp
Code/BinaryTree/: code_0_binarytree.h  code_10_findBottomLeftValue.cpp  code_11_hasPathSum.cpp  code_12_buildTree.cpp  code_13_constructMaximumBinaryTree.cpp  code_14_mergeTrees.cpp  code_15_searchBST.cpp  code_16_isValidBST.cpp  code_17_getMinimumDifference.cpp  code_18_findMode.cpp  code_19_lowestCommonAncestor.cpp  code_1_recursion.cpp  code_20_lowestCommonAncestor.cpp  code_21_deleteNode.cpp  code_21_insertIntoBST.cpp  code_22_deleteNode.cpp  code_22_trimBST.cpp  code_23_sortedArrayToBST.cpp  code_24_convertBST.cpp  code_2_iteration.cpp  code_3_layer.cpp  code_4_invertTree.cpp  code_5_depth.cpp  code_5_isSymmetric.cpp  code_6_countNodes.cpp  code_7_isBalanced.cpp  code_8_binaryTreePaths.cpp  code_9_sumOfLeftLeaves.cpp
Code/DP/: code_0_headers.h  code_10_findTargetSumWays.cpp  code_11_findMaxForm.cpp  code_12_change.cpp  code_13_combinationSum4.cpp  code_14_climbStairs2.cpp  code_15_coinChange.cpp  code_16_numSquares.cpp  code_17_wordBreak.cpp  code_18_rob.cpp  code_19_rob2.cpp  code_1_fib.cpp  code_20_rob3.cpp  code_21_maxProfit.cpp  code_22_maxProfit2.cpp  code_23_maxProfit3.cpp  code_24_maxProfit4.cpp  code_25_maxProfit5.cpp  code_26_maxProfit6.cpp  code_27_maxProfitxxxxxxx.cpp  code_28_lengthOfLIS.cpp  code_29_findLengthOfLCIS.cpp  code_2_climbStairs.cpp  code_30_findLength.cpp  code_31_longestCommonSubsequence.cpp  code_32_maxUncrossedLines.cpp  code_33_maxSubArray.cpp  code_34_isSubsequence.cpp  code_35_numDistinct.cpp  code_36_minDistance.cpp  code_37_minDistance.cpp  code_38_countSubstrings.cpp  code_39_longestPalindromeSubseq.cpp  code_3_minCostClimbingStairs.cpp  code_4_uniquePaths.cpp  code_5_uniquePathsWithObstacles.cpp  code_6_integerBreak.cpp  code_7_numTrees.cpp  code_8_canPartition.cpp  code_9_lastStoneWeightII.cpp
Code/DoublePointer/: code_10_fourSum.cpp  code_1_removeElement.cpp  code_2_reverseString.cpp  code_3_replaceDIgits.cpp  code_4_reverseWord.cpp  code_5_reverseList.cpp  code_6_removeNthFromEnd.cpp  code_7_getIntersectionNode.cpp  code_8_detectCycle.cpp  code_9_threeSum.cpp
Code/Greed/: code_0_headers.h  code_10_lemonadeChange.cpp  code_11_reconstructQueue.cpp  code_12_findMinArrowShots.cpp  code_13_eraseOverlapIntervals.cpp  code_14_partitionLabels.cpp  code_15_merge.cpp  code_16_monotoneIncreasingDigits.cpp  code_17_minCameraCover.cpp  code_1_findContentChildren.cpp  code_2_wiggleMaxLength.cpp  code_3_maxSubArray.cpp  code_4_maxProfit.cpp  code_5_canJump.cpp  code_6_jump.cpp  code_7_largestSumAfterKNegations.cpp  code_8_canCompleteCircuit.cpp  code_9_candy.cpp
Code/Hash/: code_1_isAnagram.cpp  code_2_intersection.cpp  code_3_isHappy.cpp  code_4_twoSum.cpp  code_5_fourSumCount.cpp  code_6_canConstruct.cpp  code_7_threeSum.cpp  code_8_fourSum.cpp
Code/LinkList/: code_0_linklist.h  code_1_removeElements.cpp  code_2_MyLinkedList.cpp  code_3_reverseList.cpp  code_4_swapPairs.cpp  code_5_removeNthFromEnd.cpp  code_6_getIntersectionNode.cpp  code_7_detectCycle.cpp
Code/MonotonicStack/: code_0_headers.h  code_1_dailyTemperatures.cpp  code_2_nextGreaterElement.cpp  code_3_nextGreaterElements2.cpp  code_4_trap.cpp  code_5_largestRectangleArea.cpp
Code/StackAndQueue/: code_1_MyQueue.cpp  code_2_MyStack.cpp  code_3_isValid.cpp  code_4_removeDuplicates.cpp  code_5_evalRPN.cpp  code_6_maxSlidingWindow.cpp  code_7_topKFrequent.cpp
Code/String(KMP)/: code_1_reverseString.cpp  code_2_reverseStr.cpp  code_3_replaceDigits.cpp  code_4_reverseWords.cpp  code_5_rotate.cpp  code_6_strStr.cpp  code_7_repeatedSubstringPattern.cpp
LeetCode_Top100/: lc_100findDuplicate.cpp  lc_10_subarraySum.cpp  lc_11_maxSlidingWindow.cpp  lc_12_minWindow.cpp  lc_13_maxSubArray.cpp  lc_14_merge.cpp  lc_15_rotate.cpp  lc_16_productExceptSelf.cpp  lc_17_firstMissingPositive.cpp  lc_18_setZeroes.cpp  lc_19_spiralOrder.cpp  lc_1_moveZeroes.cpp  lc_20_rotate.cpp  lc_21_searchMatrix.cpp  lc_22_getIntersectionNode.cpp  lc_23_reverseList.cpp  lc_24_isPalindrome.cpp  lc_25_hasCycle.cpp  lc_26_detectCycle.cpp  lc_27_mergeTwoLists.cpp  lc_28_addTwoNumbers.cpp  lc_29_removeNthFromEnd.cpp  lc_2_twoSum.cpp  lc_30_swapPairs.cpp  lc_31_reverseKGroup.cpp  lc_32_copyRandomList.cpp  lc_33_sortList.cpp  lc_34_mergeKLists.cpp  lc_35_LRUCache.cpp  lc_36_inorderTraversal.cpp  lc_37_maxDepth.cpp  lc_38_invertTree.cpp  lc_39_isSymmetric.cpp  lc_3_groupAnagrams.cpp  lc_40_diameterOfBinaryTree.cpp  lc_41_levelOrder.cpp  lc_42_sortedArrayToBST.cpp  lc_43_isValidBST.cpp  lc_44_kthSmallest.cpp  lc_45_rightSideView.cpp  (+60 more)
