cmake_minimum_required(VERSION 3.29)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algorithm main.cpp)

add_executable(lc__h_1 LeetCode_Top100/lc_2_twoSum.cpp)
add_executable(lc_2_groupAnagrams LeetCode_Top100/lc_3_groupAnagrams.cpp)
add_executable(lc_3_longestConsecutive LeetCode_Top100/lc_4_longestConsecutive.cpp)
add_executable(lc_1_moveZeroes LeetCode_Top100/lc_1_moveZeroes.cpp)
add_executable(nk_2 Basics_CPP/nk_2.cpp)
add_executable(lc_4_maxArea LeetCode_Top100/lc_5_maxArea.cpp)
add_executable(lc_5_threeSum LeetCode_Top100/lc_6_threeSum.cpp)
add_executable(lc_6_trap LeetCode_Top100/lc_7_trap.cpp)
add_executable(lc_7_lengthOfLongestSubstring LeetCode_Top100/lc_8_lengthOfLongestSubstring.cpp)
add_executable(lc_8_findAnagrams LeetCode_Top100/lc_9_findAnagrams.cpp)
add_executable(lc_9_subarraySum LeetCode_Top100/lc_10_subarraySum.cpp)
add_executable(lc_10_maxSlidingWindow LeetCode_Top100/lc_11_maxSlidingWindow.cpp
        LeetCode_Top100/lc_86_wordBreak.cpp
        LeetCode_Top100/lc_87_lengthOfLIS.cpp
        LeetCode_Top100/lc_88_maxProduct.cpp
        LeetCode_Top100/lc_89_canPartition.cpp)
add_executable(lc_11_minWindow LeetCode_Top100/lc_12_minWindow.cpp)
add_executable(lc_13_maxSubArray LeetCode_Top100/lc_13_maxSubArray.cpp)
add_executable(lc_14_merge LeetCode_Top100/lc_14_merge.cpp)
add_executable(lc_14_rotate LeetCode_Top100/lc_15_rotate.cpp)
add_executable(lc_16_productExceptSelf LeetCode_Top100/lc_16_productExceptSelf.cpp)
add_executable(lc_17_firstMissingPositive LeetCode_Top100/lc_17_firstMissingPositive.cpp)
add_executable(lc_18_setZeroes LeetCode_Top100/lc_18_setZeroes.cpp)
add_executable(lc_19_spiralOrder LeetCode_Top100/lc_19_spiralOrder.cpp)
add_executable(lc_20_rotate LeetCode_Top100/lc_20_rotate.cpp)
add_executable(lc_21_searchMatrix LeetCode_Top100/lc_21_searchMatrix.cpp)
add_executable(lc_22_getIntersectionNode LeetCode_Top100/lc_22_getIntersectionNode.cpp)
add_executable(lc_24_isPalindrome LeetCode_Top100/lc_24_isPalindrome.cpp)
add_executable(lc_25_hasCycle LeetCode_Top100/lc_25_hasCycle.cpp)
add_executable(lc_26_detectCycle LeetCode_Top100/lc_26_detectCycle.cpp)
add_executable(lc_27_mergeTwoLists LeetCode_Top100/lc_27_mergeTwoLists.cpp)
add_executable(lc_28_addTwoNumbers LeetCode_Top100/lc_28_addTwoNumbers.cpp)
add_executable(lc_29_removeNthFromEnd LeetCode_Top100/lc_29_removeNthFromEnd.cpp)
add_executable(lc_30_swapPairs LeetCode_Top100/lc_30_swapPairs.cpp)
add_executable(lc_31_reverseKGroup LeetCode_Top100/lc_31_reverseKGroup.cpp)
add_executable(lc_32_copyRandomList LeetCode_Top100/lc_32_copyRandomList.cpp)
add_executable(lc_33_sortList LeetCode_Top100/lc_33_sortList.cpp)
add_executable(lc_34_mergeKLists LeetCode_Top100/lc_34_mergeKLists.cpp)
add_executable(lc_35_LRUCache LeetCode_Top100/lc_35_LRUCache.cpp)
add_executable(lc_36_inorderTraversal LeetCode_Top100/lc_36_inorderTraversal.cpp)
add_executable(lc_37_maxDepth LeetCode_Top100/lc_37_maxDepth.cpp)
add_executable(lc_38_invertTree LeetCode_Top100/lc_38_invertTree.cpp)
add_executable(lc_39_isSymmetric LeetCode_Top100/lc_39_isSymmetric.cpp)
add_executable(lc_40_diameterOfBinaryTree LeetCode_Top100/lc_40_diameterOfBinaryTree.cpp)
add_executable(lc_41_levelOrder LeetCode_Top100/lc_41_levelOrder.cpp)
add_executable(lc_42_sortedArrayToBST LeetCode_Top100/lc_42_sortedArrayToBST.cpp)
add_executable(lc_43_isValidBST LeetCode_Top100/lc_43_isValidBST.cpp)
add_executable(lc_44_kthSmallest LeetCode_Top100/lc_44_kthSmallest.cpp)
add_executable(lc_45_rightSideView LeetCode_Top100/lc_45_rightSideView.cpp)
add_executable(lc_46_flatten LeetCode_Top100/lc_46_flatten.cpp)
add_executable(lc_47_buildTree LeetCode_Top100/lc_47_buildTree.cpp)
add_executable(lc_48_pathSum LeetCode_Top100/lc_48_pathSum.cpp)
add_executable(lc_49_lowestCommonAncestor LeetCode_Top100/lc_49_lowestCommonAncestor.cpp)
add_executable(lc_50_maxPathSum LeetCode_Top100/lc_50_maxPathSum.cpp)
add_executable(lc_51_numIslands LeetCode_Top100/lc_51_numIslands.cpp)
add_executable(lc_52_orangesRotting LeetCode_Top100/lc_52_orangesRotting.cpp)
add_executable(lc_53_canFinish LeetCode_Top100/lc_53_canFinish.cpp)
add_executable(lc_54_Trie LeetCode_Top100/lc_54_Trie.cpp)
add_executable(lc_55_permute LeetCode_Top100/lc_55_permute.cpp)
add_executable(lc_56_subsets LeetCode_Top100/lc_56_subsets.cpp)
add_executable(lc_57_letterCombinations LeetCode_Top100/lc_57_letterCombinations.cpp)
add_executable(lc_58_combinationSum LeetCode_Top100/lc_58_combinationSum.cpp)
add_executable(lc_59_generateParenthesis LeetCode_Top100/lc_59_generateParenthesis.cpp)
add_executable(lc_60_exist LeetCode_Top100/lc_60_exist.cpp)
add_executable(lc_61_partition LeetCode_Top100/lc_61_partition.cpp)
add_executable(lc_62_solveNQueens LeetCode_Top100/lc_62_solveNQueens.cpp)
add_executable(lc_63_searchInsert LeetCode_Top100/lc_63_searchInsert.cpp)
add_executable(lc_64_searchMatrix LeetCode_Top100/lc_64_searchMatrix.cpp)
add_executable(lc_65_searchRange LeetCode_Top100/lc_65_searchRange.cpp)
add_executable(lc_66_search LeetCode_Top100/lc_66_search.cpp)
add_executable(lc_67_findMin LeetCode_Top100/lc_67_findMin.cpp)
add_executable(lc_68_findMedianSortedArrays LeetCode_Top100/lc_68_findMedianSortedArrays.cpp)
add_executable(lc_69_isValid LeetCode_Top100/lc_69_isValid.cpp)
add_executable(lc_70_MinStack LeetCode_Top100/lc_70_MinStack.cpp)
add_executable(lc_71_decodeString LeetCode_Top100/lc_71_decodeString.cpp)
add_executable(lc_72_dailyTemperatures LeetCode_Top100/lc_72_dailyTemperatures.cpp)
add_executable(lc_73_largestRectangleArea LeetCode_Top100/lc_73_largestRectangleArea.cpp)
add_executable(lc_74_findKthLargest LeetCode_Top100/lc_74_findKthLargest.cpp)
add_executable(lc_75_topKFrequent LeetCode_Top100/lc_75_topKFrequent.cpp)
add_executable(lc_76_MedianFinder LeetCode_Top100/lc_76_MedianFinder.cpp)
add_executable(lc_77_maxProfit LeetCode_Top100/lc_77_maxProfit.cpp)
add_executable(lc_78_canJump LeetCode_Top100/lc_78_canJump.cpp)
add_executable(lc_79_jump LeetCode_Top100/lc_79_jump.cpp)
add_executable(lc_80_partitionLabels LeetCode_Top100/lc_80_partitionLabels.cpp)
add_executable(lc_81_climbStairs LeetCode_Top100/lc_81_climbStairs.cpp)
add_executable(lc_82_generate LeetCode_Top100/lc_82_generate.cpp)
add_executable(lc_83_rob LeetCode_Top100/lc_83_rob.cpp)
add_executable(lc_84_numSquares LeetCode_Top100/lc_84_numSquares.cpp)
add_executable(lc_85_coinChange LeetCode_Top100/lc_85_coinChange.cpp)
add_executable(lc_86_ LeetCode_Top100/lc_86_wordBreak.cpp)
add_executable(lc_86_wordBreak LeetCode_Top100/lc_86_wordBreak.cpp)
add_executable(lc_87_lengthOfLIS LeetCode_Top100/lc_87_lengthOfLIS.cpp)
add_executable(code_21_deleteNode Code/BinaryTree/code_21_deleteNode.cpp)
add_executable(code_22_trimBST Code/BinaryTree/code_22_trimBST.cpp)
add_executable(code_22_sortedArrayToBST Code/BinaryTree/code_23_sortedArrayToBST.cpp)
add_executable(code_24_convertBST Code/BinaryTree/code_24_convertBST.cpp)
add_executable(code_1_combine Code/Backtrack/code_1_combine.cpp)
add_executable(code_2_combinationSum3 Code/Backtrack/code_2_combinationSum3.cpp)
add_executable(code_3_letterCombinations Code/Backtrack/code_3_letterCombinations.cpp)
add_executable(code_4_combinationSum Code/Backtrack/code_4_combinationSum.cpp)
add_executable(code_5_combinationSum2 Code/Backtrack/code_5_combinationSum2.cpp)
add_executable(code_6_partition Code/Backtrack/code_6_partition.cpp)
add_executable(code_7_restoreIpAddresses Code/Backtrack/code_7_restoreIpAddresses.cpp)
add_executable(code_8_subsets Code/Backtrack/code_8_subsets.cpp)
add_executable(code_9_subsetsWithDup Code/Backtrack/code_9_subsetsWithDup.cpp)
add_executable(code_10_findSubsequences Code/Backtrack/code_10_findSubsequences.cpp)
add_executable(code_11_permute Code/Backtrack/code_11_permute.cpp)
add_executable(code_12_permuteUnique Code/Backtrack/code_12_permuteUnique.cpp)